fixed the lvl and hp values so that now they work properly on click and race and class basic info isn't hidden by it

--- a/src/css/charactersheet.css
+++ b/src/css/charactersheet.css
@@ -50,14 +50,12 @@ h3
 {
 	position:relative;
 	float:right;
-	line-height:18;
 	margin-right:10px;
 }
 #level
 {
 	position:relative;
 	float:left;
-	line-height:18;
 	margin-left:5px;
 }
 #powerstable tr > td:nth-child(1)
